# Utrade

./: .gitignore  CMakeLists.txt  README.md
configs/: sample_tasks.json
include/: graph.h  scheduler.h  task.h  worker_pool.h
include/nlohmann/: json.hpp
src/: graph.cpp  main.cpp  scheduler.cpp  task.cpp  worker_pool.cpp
